--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nanoid": "^3.1.30",
     "pg": "^8.7.1"
   },
   "devDependencies": {
